Bug 392396 - TextPreview popup is shown even when window does not have focus
Summary: TextPreview popup is shown even when window does not have focus
Status: RESOLVED FIXED
Alias: None
Product: frameworks-ktexteditor
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dominik Haumann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-27 08:39 UTC by Kevin Funk
Modified: 2018-08-16 08:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.50
Sentry Crash Report:


Attachments
Screenshot showing the issue (91.56 KB, image/png)
2018-03-27 08:39 UTC, Kevin Funk
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Funk 2018-03-27 08:39:15 UTC
Created attachment 111675 [details]
Screenshot showing the issue

Title says it all. 

The minimap preview popup is shown even when window does not have focus.

This behavior can be seen on Linux & Windows (the ones I've tested).
Comment 1 Kevin Funk 2018-03-27 08:41:13 UTC
Note: The desired behavior would be to *not* show the popup. There are no tooltips shown for the other widgets inside the Kate window (while inactive) either.
Comment 2 Christoph Cullmann 2018-08-16 08:28:48 UTC
We have taken a look and Dominik has some fix ready.
Comment 3 Dominik Haumann 2018-08-16 08:38:12 UTC
Git commit 190a5a845eab746dee2e69f37179dc0caf9dee1b by Dominik Haumann.
Committed on 16/08/2018 at 08:38.
Pushed by dhaumann into branch 'master'.

Show text preview only if main window is active
FIXED-IN: 5.50

M  +8    -1    src/view/kateviewhelpers.cpp

https://commits.kde.org/ktexteditor/190a5a845eab746dee2e69f37179dc0caf9dee1b