Show text preview only if main window is active

BUG: 392396
FIXED-IN: 5.50